--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+1.5.3 2014-11-01
+- Fix multiple servers on local side
+
+1.5.2 2014-09-09
+- Fix IPv6 address on client side
+
+1.5.1 2014-09-09
+- Fix wrong key cached when changing method on the fly
+
 1.5.0 2014-09-09
 - Add RC4-MD5 encryption
 
